refactored build.gradle files